[gd_scene load_steps=8 format=2]

[ext_resource path="res://image/AL_blocky.png" type="Texture" id=1]
[ext_resource path="res://MainMenu.gd" type="Script" id=2]
[ext_resource path="res://font/Gecade.ttf" type="DynamicFontData" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.72549, 0.717647, 0.717647, 1 )

[sub_resource type="DynamicFont" id=2]
size = 35
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 35
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 35
font_data = ExtResource( 3 )

[node name="Control" type="Control"]
anchor_right = 1.875
anchor_bottom = 1.8
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TouchScreenButton" type="TouchScreenButton" parent="Panel"]
position = Vector2( 708.89, 40.3674 )
scale = Vector2( 1.01738, 0.952095 )
normal = ExtResource( 1 )

[node name="sandbox_mode_button" type="Button" parent="Panel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -101.414
margin_top = 360.0
margin_right = 218.586
margin_bottom = 440.0
custom_fonts/font = SubResource( 2 )
text = "Sandbox Mode"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="task_mode_button" type="Button" parent="Panel"]
margin_left = 860.0
margin_top = 480.0
margin_right = 1180.0
margin_bottom = 560.0
custom_fonts/font = SubResource( 3 )
text = "Task Mode"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="tutorial_mode_button" type="Button" parent="Panel"]
margin_left = 860.0
margin_top = 600.0
margin_right = 1180.0
margin_bottom = 680.0
custom_fonts/font = SubResource( 4 )
text = "Tutorial Mode"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Panel/sandbox_mode_button" to="." method="sandBox_mode_button_pressed"]
[connection signal="pressed" from="Panel/task_mode_button" to="." method="task_mode_button_pressed"]
[connection signal="pressed" from="Panel/tutorial_mode_button" to="." method="tutorial_mode_button_pressed"]
